Inlog pagina toegevoegd

--- a/EenmaalAndermaal-Groep-33/index.html
+++ b/EenmaalAndermaal-Groep-33/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE php>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>EenmaalAndermaal</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -36,7 +36,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="inloggen.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
   </div>
