--- a/EenmaalAndermaal-Groep-33/index.html
+++ b/EenmaalAndermaal-Groep-33/index.html
@@ -11,7 +11,6 @@
 
 </head>
 <body>
-
 <nav class="navbar fixed-top navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -68,6 +67,7 @@
       </div>
     </div>
 
+
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -80,7 +80,7 @@
 </div>
 
 <div class="container text-center">
-  <h3>What We Do</h3><br>
+  <h3>Goede deals speciaal voor u!</h3><br>
   <div class="row">
     <div class="col-sm-4">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
@@ -95,6 +95,36 @@
       <p>Project 2</p>
     </div>
   </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Current Project</p>
+    </div>
+    <div class="col-sm-4">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Project 2</p>
+    </div>
+    <div class="col-sm-4">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Project 2</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Current Project</p>
+    </div>
+    <div class="col-sm-4">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Project 2</p>
+    </div>
+    <div class="col-sm-4">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Project 2</p>
+    </div>
+  </div>
+  <br>
+  <a class="btn btn-primary" href="#" role="button">Bekijk meer!</a>
 </div><br>
 
 <footer class="container-fluid text-center">
