--- a/EenmaalAndermaal-Groep-33/registreren.html
+++ b/EenmaalAndermaal-Groep-33/registreren.html
@@ -42,60 +42,60 @@
   </div>
 </nav>
 <div class="container">
-            <form class="form-horizontal" role="form">
+            <form class="form-horizontal" role="form" action="registreren.php" method="post">
                 <h2>Registratie formulier</h2>
                 <div class="form-group">
                     <label for="Gebruikersnaam" class="col-sm-3 control-label">Gebruikersnaam</label>
                     <div class="col-sm-9">
-                        <input type="text" id="Gebruikersnaam" placeholder="Gebruikersnaam" class="form-control" autofocus>
+                        <input type="text" name="userName" id="Gebruikersnaam" placeholder="Gebruikersnaam" class="form-control" autofocus>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="Voornaam" class="col-sm-3 control-label">Voornaam</label>
                     <div class="col-sm-9">
-                        <input type="text" id="Voornaam" placeholder="Voornaam" class="form-control">
+                        <input type="text" name="name" id="Voornaam" placeholder="Voornaam" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="Achternaam" class="col-sm-3 control-label">Achternaam</label>
                     <div class="col-sm-9">
-                        <input type="text" id="Achternaam" placeholder="Achternaam" class="form-control">
+                        <input type="text" name="surname" id="Achternaam" placeholder="Achternaam" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="Adresregel1" class="col-sm-3 control-label">Adresregel1</label>
                     <div class="col-sm-9">
-                        <input type="text" id="Adresregel1" placeholder="Adresregel" class="form-control">
+                        <input type="text" name="address1" id="Adresregel1" placeholder="Adresregel" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="Adresregel2" class="col-sm-3 control-label">Adresregel2 (optioneel)</label>
                     <div class="col-sm-9">
-                        <input type="text" id="Adresregel2" placeholder="Adresregel" class="form-control">
+                        <input type="text" name="address2" id="Adresregel2" placeholder="Adresregel" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="Postcode" class="col-sm-3 control-label">Postcode</label>
                     <div class="col-sm-9">
-                        <input type="text" id="Postcode" placeholder="Postcode" class="form-control">
+                        <input type="text" name="postCode" id="Postcode" placeholder="Postcode" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="plaatsnaam" class="col-sm-3 control-label">Plaatsnaam</label>
                     <div class="col-sm-9">
-                        <input type="text" id="Plaatsnaam" placeholder="Plaatsnaam" class="form-control">
+                        <input type="text" name="placeName" id="Plaatsnaam" placeholder="Plaatsnaam" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="Geboortedatum" class="col-sm-3 control-label">Geboortedatum</label>
                     <div class="col-sm-9">
-                        <input type="date" id="Geboortedatum" class="form-control">
+                        <input type="date" name="birthDate" id="Geboortedatum" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="country" class="col-sm-3 control-label">Country</label>
                     <div class="col-sm-9">
-                        <select id="country" class="form-control">
+                        <select id="country" name="country" class="form-control">
                             <option>Netherlands</option>
                             <option>Belgium</option>
                             <option>Denmark</option>
@@ -109,25 +109,25 @@
                 <div class="form-group">
                     <label for="Emailadres" class="col-sm-3 control-label">Emailadres</label>
                     <div class="col-sm-9">
-                        <input type="text" id="Emailadres" placeholder="Emailadres" class="form-control">
+                        <input type="text" name="mailBox" id="Emailadres" placeholder="Emailadres" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="Wachtwoord" class="col-sm-3 control-label">Wachtwoord</label>
                     <div class="col-sm-9">
-                        <input type="password" id="Wachtwoord" placeholder="Wachtwoord" class="form-control">
+                        <input type="password" name="password" id="Wachtwoord" placeholder="Wachtwoord" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="Beveiligingsvraag" class="col-sm-3 control-label">Beveiligingsvraag</label>
                     <div class="col-sm-9">
-                        <input type="text" id="Beveiligingsvraag" placeholder="Beveiligingsvraag" class="form-control">
+                        <input type="text" name="questionNumber" id="Beveiligingsvraag" placeholder="Beveiligingsvraag" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="Antwoordtekst" class="col-sm-3 control-label">Antwoord Beveiligingsvraag</label>
                     <div class="col-sm-9">
-                        <input type="text" id="Antwoordtekst" placeholder="Antwoordtekst" class="form-control">
+                        <input type="text" name="answer" id="Antwoordtekst" placeholder="Antwoordtekst" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
